--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
             ./tsp_solver <num_cities> [seed] [threads]
             ```
           draft: false
-          prerelease: true
+          prerelease: false
 
   build-and-upload:
     name: Build - ${{ matrix.name }}
