ask claude to fix workflow
The issue is with the GitHub Actions workflow - it's using the literal string "ubuntu-latest" instead of the actual OS variable. The condition `[[ "ubuntu-latest" == "windows-latest" ]]` will always be false, and then it's looking for a binary that doesn't exist.

Let me fix the test workflow:The fix changes from using `${{ matrix.os }}` (which gives "ubuntu-latest", "windows-latest", etc.) to using `${{ runner.os }}` which gives the actual OS name ("Windows", "Linux", "macOS").

This way the condition will properly check for Windows and look for the correct binary name:
- Windows: `tsp_solver.exe`
- Linux/macOS: `tsp_solver`

The test should now pass on all platforms!

name: Test TSP Solver

on: [push, pull_request]

env:
  CARGO_TERM_COLOR: always

jobs:
  test:
    name: Test - ${{ matrix.os }}
    runs-on: ${{ matrix.os }}
    strategy:
      matrix:
        os: [ubuntu-latest, windows-latest, macos-latest]

    steps:
    - name: Checkout code
      uses: actions/checkout@v4

    - name: Setup Rust
      uses: dtolnay/rust-toolchain@stable

    - name: Cache cargo registry
      uses: actions/cache@v4
      with:
        path: |
          ~/.cargo/bin/
          ~/.cargo/registry/index/
          ~/.cargo/registry/cache/
          ~/.cargo/git/db/
          target/
        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
        restore-keys: |
          ${{ runner.os }}-cargo-

    - name: Build
      run: cargo build --release

    - name: Run tests
      run: cargo test --release

    - name: Test with 5 cities
      run: cargo run --release -- 5 42

    - name: Test with 7 cities
      run: cargo run --release -- 7 123

    - name: Test with 10 cities (with threads)
      run: cargo run --release -- 10 42 4

    - name: Verify binary exists
      shell: bash
      run: |
        if [[ "${{ runner.os }}" == "Windows" ]]; then
          test -f target/release/tsp_solver.exe && echo "✓ Binary found"
        else
        

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Verify binary exists
       shell: bash
       run: |
-        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+        if [[ "${{ runner.os }}" == "Windows" ]]; then
           test -f target/release/tsp_solver.exe && echo "✓ Binary found"
         else
           test -f target/release/tsp_solver && echo "✓ Binary found"
